--- a/pagina.html
+++ b/pagina.html
@@ -13,7 +13,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+<meta name="robots" content="follow,index">
 
 </head>
 
@@ -25,7 +25,11 @@
 
 <nav>
 
+<h1>esto es un encabezado</h1>
 <a href="#">Inicio</a>
+
+
+
 
 
 </nav>
